--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
           <div class="relative flex h-16 items-center justify-between">
             <img src="./images/logo-bookmark.svg" alt="bookmark logo" class="company-logo z-3"/>
             <div class="menu-area text-center">
-              <div class="menu flex">
-                <hr class="my-4 border-gray-300"/>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:text-red-600 focus:text-red-600">
+              <div class="p-8 sm:p-0 menu flex">
+                <hr class="w-full my-4 border-gray-100"/>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium uppercase text-gray-300 hover:text-red-600 focus:text-red-600">
                   Features</a>
-                <hr class="my-4 border-gray-300"/>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:text-red-600 focus:text-red-600">
+                <hr class="w-full my-4 border-gray-100"/>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium uppercase text-gray-300 hover:text-red-600 focus:text-red-600">
                   Pricing</a>
-                <hr class="my-4 border-gray-300"/>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:text-red-600 focus:text-red-600">
+                <hr class="w-full my-4 border-gray-100"/>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium uppercase text-gray-300 hover:text-red-600 focus:text-red-600">
                   Contact</a>
-                <hr class="my-4 border-gray-300"/>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-50 bg-rose-500 border-transparent border-solid border-1
+                <hr class="w-full my-4 border-gray-100"/>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium uppercase text-gray-50 bg-rose-500 border-transparent border-solid border-1
                 hover:bg-gray-50 hover:text-rose-500 hover:border-rose-500
                 focus:bg-gray-50 focus:text-rose-500 focus:border-rose-500">
                 Login</a>
@@ -58,16 +58,16 @@
         </div>     
       </nav>
     </header>
-    <section class="p-7 flex flex-col lg:flex-row-reverse lg:pl-10 lg:flex-1/2">
+    <section class="p-7 flex flex-col w-full lg:flex-row-reverse lg:px-30 lg:pt-20 lg:gap-20">
       <div class="relative mb-14 lg:flex-1/2">
         <img src="./images/illustration-hero.svg" alt="hero image" class="relative z-1"/>
         <div class="bg-indigo-600 absolute top-10 lg:top-40 left-20 lg:left-40 w-145 h-50 rounded-full z-0 lg:w-300 lg:h-100"></div>
       </div>
-      <div class="lg:flex-1/2">
-        <h1 class="mb-5 text-3xl text-gray-900 text-center">
+      <div class="lg:flex-1/2 lg:px-10">
+        <h1 class="mb-5 text-3xl text-gray-900 text-center lg:text-left">
           A Simple Bookmark Manager
         </h1>
-        <p class="text-lg text-gray-500 text-center">
+        <p class="text-lg text-gray-500 text-center lg:text-left">
           A clean and simple interface to organize your favourite websites. Open a new 
           browser tab and see your sites load instantly. Try it for free.
         </p>
@@ -82,7 +82,7 @@
         </div>
       </div>
     </section>
-    <div id="feature-sections" class="lg:px-40 lg:py-16">
+    <div id="feature-sections" class="lg:px-40 lg:py-20">
       <div class="lg:px-36">
         <div class="mx-auto lg:w-100">
           <h1 class="mb-5 text-3xl text-gray-900 text-center">
@@ -115,14 +115,14 @@
           </div>
         </div>
         <div class="lg:flex-1">
-          <h1 class="mb-5 text-3xl text-gray-900 text-center">
+          <h1 class="mb-5 text-3xl text-gray-900 text-center lg:text-left">
             Bookmark in one click
           </h1>
-          <p class="mb-5 text-lg text-gray-500 text-center">
+          <p class="mb-5 text-lg text-gray-500 text-center lg:text-left">
             Organize your bookmarks however you like. Our simple drag-and-drop interface 
             gives you complete control over how you manage your favourite sites.
           </p>    
-          <button class="w-32 m-auto p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
+          <button class="w-32 m-auto lg:m-0 p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
           hover:bg-gray-50 hover:text-indigo-600 hover:border-indigo-600
           focus:bg-gray-50 focus:text-indigo-600 focus:border-indigo-600">
             More Info
@@ -134,18 +134,18 @@
           <div class="relative mb-30">
             <img src="./images/illustration-features-tab-2.svg" alt="speedy searching feature" class="relative z-1"/>
             <div class="bg-indigo-600 absolute top-15 right-20 w-145 h-50 rounded-full z-0
-              lg:w-300 lg:h-100"></div>
+            lg:top-20 lg:right-80 lg:w-300 lg:h-100"></div>
           </div>
         </div>
         <div class="lg:flex-1">
-          <h1 class="mb-5 text-3xl text-gray-900 text-center">
+          <h1 class="mb-5 text-3xl text-gray-900 text-center lg:text-left">
             Intelligent search
           </h1>
-          <p class="mb-5 text-lg text-gray-500 text-center">
+          <p class="mb-5 text-lg text-gray-500 text-center lg:text-left">
             Our powerful search feature will help you find saved sites in no time at all. 
             No need to trawl through all of your bookmarks.
           </p>
-          <button class="w-32 m-auto p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
+          <button class="w-32 m-auto lg:m-0 p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
           hover:bg-gray-50 hover:text-indigo-600 hover:border-indigo-600
           focus:bg-gray-50 focus:text-indigo-600 focus:border-indigo-600">
             More Info
@@ -157,18 +157,18 @@
           <div class="relative mb-30">
             <img src="./images/illustration-features-tab-3.svg" alt="easy sharing feature" class="relative z-1"/>
             <div class="bg-indigo-600 absolute top-15 right-20 w-145 h-50 rounded-full z-0
-              lg:w-300 lg:h-100"></div>
+            lg:top-20 lg:right-80 lg:w-300 lg:h-100"></div>
           </div>
         </div>
         <div class="lg:flex-1">
-          <h1 class="mb-5 text-3xl text-gray-900 text-center">
+          <h1 class="mb-5 text-3xl text-gray-900 text-center lg:text-left">
             Share your bookmarks
           </h1>
-          <p class="mb-5 text-lg text-gray-500 text-center">
+          <p class="mb-5 text-lg text-gray-500 text-center lg:text-left">
             Easily share your bookmarks and collections with others. Create a shareable 
             link that you can send at the click of a button.
           </p>
-          <button class="w-32 m-auto p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
+          <button class="w-32 m-auto lg:m-0 p-2 text-sm bg-indigo-600 text-gray-50 rounded-sm block border-transparent  border-1 border-solid
           hover:bg-gray-50 hover:text-indigo-600 hover:border-indigo-600
           focus:bg-gray-50 focus:text-indigo-600 focus:border-indigo-600">
             More Info
@@ -253,7 +253,7 @@
       </div>
       <div>
         <p tabindex="0" class="faq-question flex items-center justify-between mb-5 text-lg text-gray-900 
-        cursor-pointer hover:text-red-600 focus:text-red-600">
+        hover:cursor-pointer hover:text-red-600 focus:text-red-600">
           <!-- Question 2 -->
           <span>How can I request a new browser?</span>
           <img class="w-4 h-3" src="./images/icon-arrow.svg" alt="open answer arrow"/>
@@ -269,7 +269,7 @@
       </div>
       <div>
         <p tabindex="0" class="faq-question flex items-center justify-between mb-5 text-lg text-gray-900 
-        cursor-pointer hover:text-red-600 focus:text-red-600">
+        hover:cursor-pointer hover:text-red-600 focus:text-red-600">
           <!-- Question 3 -->
           <span>Is there a mobile app?</span>
           <img class="w-4 h-3" src="./images/icon-arrow.svg" alt="open answer arrow"/>
@@ -284,7 +284,7 @@
       </div>
       <div>
         <p tabindex="0" class="faq-question flex items-center justify-between mb-5 text-lg text-gray-900 
-        cursor-pointer hover:text-red-600 focus:text-red-600">
+        hover:cursor-pointer hover:text-red-600 focus:text-red-600">
           <!-- Question 4 -->
           <span>What about other Chromium browsers?</span>
           <img class="w-4 h-3" src="./images/icon-arrow.svg" alt="open answer arrow"/>
@@ -329,18 +329,18 @@
       </div>
       <!-- Contact Us -->
     </section>
-    <footer class="bg-blue-950 p-10 flex flex-col items-center text-gray-50">  
+    <footer class="bg-blue-950 p-10 lg:px-30 flex flex-col lg:flex-row items-center text-gray-50">  
       <img src="./images/logo-bookmark2.svg" alt="bookmark logo"/>
-      <ul class="text-center">
-        <li class="m-5 hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Features</a></li>
-        <li class="m-5 hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Pricing</a></li>
-        <li class="m-5 hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Contact</a></li>
-        <div class="social-logos mx-auto inline-flex gap-5">
-          <a href="www.twitter.com"><img src="./images/icon-twitter.svg" alt="twitter logo"/></a>
-          <a href="www.facebook.com"><img src="./images/icon-facebook.svg" alt="facebook logo"/></a>
-        </div>
+      <ul class="text-center flex flex-col lg:flex-row lg:items-center">
+        <li class="m-5 uppercase hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Features</a></li>
+        <li class="m-5 uppercase hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Pricing</a></li>
+        <li class="m-5 uppercase hover:cursor-pointer hover:text-red-600"><a class="focus:text-red-600" href="#">Contact</a></li>
       </ul>
-    </footer>
+      <div class="social-logos w-fit mx-auto lg:ml-auto lg:mr-0 inline-flex gap-5">
+        <a href="www.twitter.com"><img src="./images/icon-twitter.svg" alt="twitter logo"/></a>
+        <a href="www.facebook.com"><img src="./images/icon-facebook.svg" alt="facebook logo"/></a>
+      </div>
+  </footer>
     
     <!-- <footer>
       <p class="attribution">
